@@ -1,6 +1,7 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
+- Scripting: new Javascript API: OvmsEvents.Raise(event, [delay_ms])
 - Twizy: immediate tuning metrics updates (was delegated to ticker before),
   remember profile key loaded into working set, remember tuning applied state
   New metrics:
